# rust-workspace-template

./: Cargo.toml  LICENSE  ListOfTools.txt  README.md  install-tools.sh
crates/bins/: Cargo.toml
crates/errors/: Cargo.toml
crates/io/: Cargo.toml
crates/macros/: Cargo.toml
crates/proc-macros/: Cargo.toml
crates/proc-macros/src/: lib.rs
crates/tests/: Cargo.toml
crates/types/: Cargo.toml
crates/utils/: Cargo.toml
